compiler/tests/compile_fail/region_relation_unpack.lg
/* Copyright 2013 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#line 0

// fails-with:
// TypeError:
// tests/compile_fail/region_relation_unpack.lg:23:9:
// Invalid privilege reads(re.x) requested in pointer dereference

task main() {}

struct foo<ra: region<foo<?>>>[rb: region<foo<?>>]
{
  x: int,
  y: foo<ra>@rb,
}

task bar(rc: region<foo<?>>, s: foo<rc>): int
{
  return s.x;
}

task baz(rd: region<foo<?>>, s: foo<rd>): int
  , reads(rd)
{
  unpack s as t: foo<rd>[re];
  return t.y->x;
}
